# pwasm-tutorial

./: .travis.yml  README.md  dev-node-setup.md  package-lock.json  package.json  rust-toolchain  script.js  tutorial-project.md  wasm-dev-chain.json  wasm-install.sh
step-0/: Cargo.toml  README.md
step-0/src/: sample.rs
step-1/: Cargo.toml  README.md
step-1/src/: lib.rs  sample.rs
step-2/: Cargo.toml  README.md  rust-toolchain
step-2/src/: lib.rs  sample.rs
step-3/: Cargo.toml  README.md
step-3/src/: lib.rs  sample.rs
step-4/: Cargo.toml  README.md  rust-toolchain
step-4/src/: lib.rs  sample.rs
step-5/: .gitignore  Cargo.toml  README.md  build.sh
step-5/src/: lib.rs  sample.rs
