[package]
name = "pwasm-tutorial-contract"
version = "0.1.0"
authors = ["Alexey Frolov <alexey@parity.io>"]

[dependencies]
pwasm-std = "0.3"
pwasm-ethereum = { git = "https://github.com/nikvolf/pwasm-ethereum" }

[lib]
crate-type = ["cdylib"]
path = "src/sample.rs"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
