[package]
name = "pwasm-tutorial-contract"
version = "0.1.0"
authors = ["Alexey Frolov <alexey@parity.io>"]

[dependencies]
pwasm-std = "0.5"
pwasm-ethereum = "0.1"

[dependencies.parity-hash]
version = "1"
default-features = false

[lib]
crate-type = ["cdylib"]
path = "src/sample.rs"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
