[package]
name = "pwasm-tutorial-contract"
version = "0.1.0"
authors = ["Alexey Frolov <alexey@parity.io>"]

[dependencies]
pwasm-std = "0.10"
pwasm-ethereum = "0.6"

[dependencies.parity-hash]
version = "1.2"
default-features = false

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
