[package]
name = "pwasm-tutorial-contract"
version = "0.1.0"
authors = ["Alexey Frolov <alexey@parity.io>"]

[dependencies]
pwasm-std = "0.9.0"
pwasm-ethereum = "0.5.1"
pwasm-abi = "0.1.2"
pwasm-abi-derive = "0.1.2"
parity-hash = "1.2.0"

[dependencies.bigint]
version = "4.4.0"
default-features = false


[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
