[package]
name = "pwasm-tutorial-contract"
version = "0.1.0"
authors = ["Alexey Frolov <alexey@parity.io>"]

[dependencies]
pwasm-std = "0.6"
pwasm-ethereum = "0.3"
pwasm-abi = "0.1"
pwasm-abi-derive = "0.1"
pwasm-test = { git = "https://github.com/paritytech/pwasm-test", optional = true }

[dependencies.bigint]
version = "4"
default-features = false

[dependencies.parity-hash]
version = "1"
default-features = false

[lib]
crate-type = ["cdylib"]
path = "src/sample.rs"

[features]
std = ["pwasm-std/std", "pwasm-ethereum/std"]
test = ["std"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
