[package]
name = "pwasm-tutorial-contract"
version = "0.1.0"
authors = ["Alexey Frolov <alexey@parity.io>"]

[dependencies]
pwasm-std = "0.13"
pwasm-ethereum = "0.8"
pwasm-abi = "0.2"
pwasm-abi-derive = "0.2"
lazy_static = { version = "1.2.0", features = ["spin_no_std"] }

[dev-dependencies.pwasm-test]
git = "https://github.com/paritytech/pwasm-test"
default-features = false

[lib]
crate-type = ["cdylib"]

[features]
std = ["pwasm-std/std", "pwasm-ethereum/std", "pwasm-test/std"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
